fixed some comments

--- a/iTunes_Tracks_EDA.ipynb
+++ b/iTunes_Tracks_EDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fourth-lemon",
+   "id": "junior-adoption",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "grateful-steel",
+   "id": "academic-yemen",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "conscious-salon",
+   "id": "pleased-maine",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "traditional-religious",
+   "id": "lightweight-symbol",
    "metadata": {},
    "source": [
     "So I have 412 songs to go through. I cleaned the dataset before so there won't be any null values. "
@@ -194,14 +194,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infinite-parking",
+   "id": "centered-adjustment",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "moral-partition",
+   "id": "dutch-interaction",
    "metadata": {},
    "source": [
     "Now I want to add a column to show Plays/Skips. This will be important to know when determining which songs I want to delete from my iTunes.  "
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "posted-seeker",
+   "id": "insured-procurement",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bored-workshop",
+   "id": "civil-somewhere",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "natural-mayor",
+   "id": "labeled-quilt",
    "metadata": {},
    "source": [
     "Let's check out the distribution for my Play-to-Skip ratio. Curious to see what it might look like so I'll use distplot from seaborn."
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "emerging-bottom",
+   "id": "pursuant-machinery",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "forced-juice",
+   "id": "communist-copper",
    "metadata": {},
    "source": [
     "Hmm it kind of looks like a power lognormal distribution. Definitely not a normal one that's for sure. What about the skew?"
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "adjustable-setup",
+   "id": "about-uncle",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "freelance-margin",
+   "id": "alternate-cathedral",
    "metadata": {},
    "source": [
     "Curious to see if a distribution for Skips would resemble the Play-to-Skip"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "crucial-daniel",
+   "id": "failing-factory",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "suburban-harvard",
+   "id": "sealed-underground",
    "metadata": {},
    "source": [
     "The main thing I want to take away from this EDA is to find out which songs I skip more than I play. So I will create a new dataframe of least liked songs i.e songs skipped more than played."
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "scientific-expansion",
+   "id": "peaceful-damages",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "therapeutic-warner",
+   "id": "minus-russell",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "single-vector",
+   "id": "prepared-macro",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "temporal-space",
+   "id": "above-grace",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "ongoing-princeton",
+   "id": "artificial-commission",
    "metadata": {},
    "source": [
     "Now let's look at my least liked tracks from Pink Floyd. I want to keep the ones from The Wall and Dark Side of the Moon in my iTunes. This is so I can listen the whole albums from start to finish.   "
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "frank-closer",
+   "id": "applicable-railway",
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "possible-basketball",
+   "id": "engaging-windsor",
    "metadata": {},
    "source": [
     "Looks like just 2 songs (Dogs and Welcome to the Machine) are not apart of The Wall or Dark Side of the Moon. Let's remove everything else from least_liked."
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "moving-bankruptcy",
+   "id": "oriented-alabama",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "stone-rally",
+   "id": "private-mapping",
    "metadata": {},
    "source": [
     "Now I have 72 potential songs to delete. Let's look at Led Zeppelin songs in my least_liked dataframe. I have more songs from them than any other artist so likely I'll have to remove a lot of the less popular ones."
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "worse-coast",
+   "id": "unavailable-receiver",
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fleet-underwear",
+   "id": "selective-accused",
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "square-physiology",
+   "id": "professional-genome",
    "metadata": {},
    "source": [
     "After looking through this list, none of these songs interest me enough to keep them. I also have several versions of some songs so I can probably do without these 38 songs. Therefore, they will all be left in the least_liked frame. Now let's check out the other songs."
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "informed-pendant",
+   "id": "pharmaceutical-walnut",
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cognitive-shame",
+   "id": "banned-tournament",
    "metadata": {},
    "outputs": [
     {
@@ -2579,7 +2579,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "tight-bennett",
+   "id": "academic-accordance",
    "metadata": {},
    "source": [
     "Looks like after checking out this list, only 'New York Times (1974)' by Bobbi Humphrey seems worthy of keeping. So let's take that song out of the least_liked frame. "
@@ -2588,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "controlled-morris",
+   "id": "equipped-heart",
    "metadata": {},
    "outputs": [
     {
@@ -2620,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "senior-stage",
+   "id": "fluid-effect",
    "metadata": {},
    "outputs": [
     {
@@ -2647,7 +2647,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "colonial-score",
+   "id": "violent-crawford",
    "metadata": {},
    "source": [
     "Now I have 71 songs to delete from my iTunes! Let's print my least_liked dataframe to a .csv file.  "
@@ -2656,7 +2656,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "foster-roller",
+   "id": "modern-nepal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "spanish-allowance",
+   "id": "surface-desperate",
    "metadata": {},
    "source": [
     "For grins and giggles, let's give a shout out to the songs I've never skipped!"
@@ -2674,7 +2674,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "necessary-latter",
+   "id": "meaningful-secondary",
    "metadata": {},
    "outputs": [
     {
@@ -2838,16 +2838,16 @@
     }
    ],
    "source": [
-    "never_skipped = track_df.loc[track_df['Last Skipped'] == '01/01/1000'] #'01/01/1000' was a value I imputed for songs with no skips\n",
+    "never_skipped = track_df.loc[track_df['Last Skipped'] == '01/01/1000'] #'01/01/1000' was a value I entered for songs with no skips\n",
     "never_skipped.head(len(never_skipped))"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "certified-albuquerque",
+   "id": "ambient-butler",
    "metadata": {},
    "source": [
-    "I know it says they were all skipped 1 time but I actually imputed those values to avoid dividing by 0 when doing the Play-to-Skip ratio. I made sure to indicate these songs had a 'Last Skipped' date value that was as low as mySQL would let me. A script uploading my data to a mySQL table is included in this project called iTunesTracks_to_mySQL.py \n",
+    "I know it says they were all skipped 1 time but I actually inserted those values to avoid dividing by 0 when doing the Play-to-Skip ratio. I made sure to indicate these songs had a 'Last Skipped' date value that was as low as mySQL would let me. A script uploading my data to a mySQL table is included in this project called iTunesTracks_to_mySQL.py \n",
     "\n",
     "That's all for now folks! Maybe I'll come back to this at some point. I do enjoy exploring my listening habits :)"
    ]
