fix some unnecessary code

--- a/iTunes_Tracks_EDA.ipynb
+++ b/iTunes_Tracks_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "purple-answer",
+   "id": "conceptual-chester",
    "metadata": {},
    "source": [
     "The purpose of this notebook is to answer the following: which songs should I delete based on the data collected by iTunes? "
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "floral-fence",
+   "execution_count": 112,
+   "id": "herbal-creature",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "loose-tongue",
+   "execution_count": 113,
+   "id": "worldwide-screw",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4   2/18/2021      1   01/01/1000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "every-gates",
+   "execution_count": 114,
+   "id": "fitted-maria",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "smaller-procedure",
+   "id": "seeing-satisfaction",
    "metadata": {},
    "source": [
     "So I have 412 songs to go through. I cleaned the dataset before so there won't be any null values. "
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "chinese-instrument",
+   "id": "public-albuquerque",
    "metadata": {},
    "source": [
     "Now I want to add a column to show Plays/Skips. This will be important to know when determining which songs I want to delete from my iTunes.  "
@@ -209,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "meaningful-creativity",
+   "execution_count": 115,
+   "id": "attached-bridges",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "9   8/4/2019    292   2/21/2021      7    2/18/2021           41.714286  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,8 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "standing-nurse",
+   "execution_count": 116,
+   "id": "moral-bruce",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "max    595.000000   40.000000          374.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "relative-portsmouth",
+   "id": "cathedral-religion",
    "metadata": {},
    "source": [
     "Let's check out the distribution for my Play-to-Skip ratio. Curious to see what it might look like so I'll use distplot from seaborn."
@@ -522,17 +522,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "caroline-wisconsin",
+   "execution_count": 117,
+   "id": "essential-directory",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe2f2f22e90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe6272124d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "acute-penetration",
+   "id": "lightweight-processor",
    "metadata": {},
    "source": [
     "Hmm it kind of looks like a power lognormal distribution. Definitely not a normal one that's for sure. What about the skew?"
@@ -563,8 +563,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "lyric-mitchell",
+   "execution_count": 118,
+   "id": "united-genealogy",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "6.369399779607103"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "assigned-typing",
+   "id": "genetic-flower",
    "metadata": {},
    "source": [
     "Curious to see if a distribution for Skips would resemble the Play-to-Skip"
@@ -593,17 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "electronic-joining",
+   "execution_count": 119,
+   "id": "tamil-timothy",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe2f31d6250>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe627183990>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "oriental-equity",
+   "id": "returning-smith",
    "metadata": {},
    "source": [
     "The main thing I want to take away from this EDA is to find out which songs I skip more than I play. So I will create a new dataframe of least liked songs i.e songs skipped more than played."
@@ -634,8 +634,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "controlling-oxygen",
+   "execution_count": 120,
+   "id": "developmental-injury",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
        "325  12/10/2020      9     1/1/2021            0.777778  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,8 +834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "foreign-architect",
+   "execution_count": 121,
+   "id": "italian-trunk",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
        "9   8/4/2019    292   2/21/2021      7    2/18/2021           41.714286  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,8 +1034,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "choice-mining",
+   "execution_count": 122,
+   "id": "certain-electron",
    "metadata": {},
    "outputs": [
     {
@@ -1063,8 +1063,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "spare-rocket",
+   "execution_count": 123,
+   "id": "caroline-gravity",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "german-debate",
+   "id": "hybrid-atlantic",
    "metadata": {},
    "source": [
     "Now let's look at my least liked tracks from Pink Floyd. I want to keep the ones from The Wall and Dark Side of the Moon in my iTunes. This is so I can listen the whole albums from start to finish.   "
@@ -1100,8 +1100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "cleared-phase",
+   "execution_count": 124,
+   "id": "focal-cornwall",
    "metadata": {},
    "outputs": [
     {
@@ -1315,19 +1315,19 @@
        "409   1/12/2020      8   12/26/2020            0.125000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "floyd_least_liked = least_liked.loc[least_liked['Artist'] == 'Pink Floyd']\n",
-    "floyd_least_liked.head(len(floyd_least_liked)) # show whole list instead of first few rows"
+    "floyd_least_liked # show whole list instead of first few rows"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "lucky-wednesday",
+   "id": "respiratory-marshall",
    "metadata": {},
    "source": [
     "Looks like just 2 songs (Dogs and Welcome to the Machine) are not apart of The Wall or Dark Side of the Moon. Let's remove everything else from least_liked."
@@ -1335,8 +1335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "efficient-female",
+   "execution_count": 125,
+   "id": "printable-bermuda",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "forty-letters",
+   "id": "swiss-defendant",
    "metadata": {},
    "source": [
     "Now I have 72 potential songs to delete. Let's look at Led Zeppelin songs in my least_liked dataframe. I have more songs from them than any other artist so likely I'll have to remove a lot of the less popular ones."
@@ -1377,8 +1377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "demanding-commons",
+   "execution_count": 126,
+   "id": "organizational-summit",
    "metadata": {},
    "outputs": [
     {
@@ -1956,20 +1956,20 @@
        "411      0  01/01/1000     10   12/23/2020            0.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "zep_least_liked = least_liked.loc[least_liked['Artist'] == 'Led Zeppelin']\n",
-    "zep_least_liked.head(len(zep_least_liked))"
+    "zep_least_liked"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "federal-forum",
+   "execution_count": 127,
+   "id": "outside-mitchell",
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "exterior-oregon",
+   "id": "three-frank",
    "metadata": {},
    "source": [
     "After looking through this list, none of these songs interest me enough to keep them. I also have several versions of some songs so I can probably do without these 38 songs. Therefore, they will all be left in the least_liked frame. Now let's check out the other songs."
@@ -2007,8 +2007,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "internal-controversy",
+   "execution_count": 128,
+   "id": "direct-variable",
    "metadata": {},
    "outputs": [
     {
@@ -2536,20 +2536,20 @@
        "408   1/15/2020      7   12/20/2020            0.142857  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "other_least_liked = least_liked[(least_liked['Artist'] != 'Pink Floyd') & (least_liked['Artist'] != 'Led Zeppelin')]\n",
-    "other_least_liked.head(len(other_least_liked))"
+    "other_least_liked"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "planned-trustee",
+   "execution_count": 129,
+   "id": "complicated-blanket",
    "metadata": {},
    "outputs": [
     {
@@ -2579,7 +2579,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "economic-cattle",
+   "id": "unnecessary-settlement",
    "metadata": {},
    "source": [
     "Looks like after checking out this list, only 'New York Times (1974)' by Bobbi Humphrey seems worthy of keeping. So let's take that song out of the least_liked frame. "
@@ -2587,8 +2587,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "surgical-trade",
+   "execution_count": 130,
+   "id": "ecological-seven",
    "metadata": {},
    "outputs": [
     {
@@ -2619,8 +2619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "reserved-double",
+   "execution_count": 131,
+   "id": "posted-wrong",
    "metadata": {},
    "outputs": [
     {
@@ -2647,7 +2647,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "herbal-drink",
+   "id": "useful-sherman",
    "metadata": {},
    "source": [
     "Now I have 71 songs to delete from my iTunes! Let's print my least_liked dataframe to a .csv file.  "
@@ -2655,17 +2655,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "twelve-reply",
+   "execution_count": 132,
+   "id": "immune-productivity",
    "metadata": {},
    "outputs": [],
    "source": [
-    "least_liked.to_csv(\"least_liked_songs.csv\")"
+    "least_liked.reset_index(drop = True, inplace = True) #drop unnecessary index\n",
+    "least_liked.to_csv(\"least_liked_songs.csv\")\n",
+    "#least_liked.head"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "beautiful-amount",
+   "id": "inside-flight",
    "metadata": {},
    "source": [
     "For grins and giggles, let's give a shout out to the songs I've never skipped!"
@@ -2673,8 +2675,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "historical-craft",
+   "execution_count": 133,
+   "id": "ranging-milan",
    "metadata": {},
    "outputs": [
     {
@@ -2832,19 +2834,19 @@
        "322      8   12/8/2020      1   01/01/1000                 8.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "never_skipped = track_df.loc[track_df['Last Skipped'] == '01/01/1000'] #'01/01/1000' was a value I entered for songs with no skips\n",
-    "never_skipped.head(len(never_skipped))"
+    "never_skipped"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "incident-prevention",
+   "id": "ceramic-astrology",
    "metadata": {},
    "source": [
     "I know it says they were all skipped 1 time but I actually inserted those values to avoid dividing by 0 when doing the Play-to-Skip ratio. I made sure to indicate these songs had a 'Last Skipped' date value that was as low as mySQL would let me. A script uploading my data to a mySQL table is included in this project called iTunesTracks_to_mySQL.py "
@@ -2853,7 +2855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "treated-parliament",
+   "id": "marine-oxide",
    "metadata": {},
    "outputs": [],
    "source": []
